--- a/change-password.html
+++ b/change-password.html
@@ -74,6 +74,7 @@
   color: white !important;
 }
 </style>
+<link rel="manifest" href="manifest.json" />
 </head>
 <body>
   <div class="global-app-css w-embed">
@@ -169,88 +170,6 @@ overflow-x: hidden;
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
-  <script>
-//document.body.setAttribute("oncontextmenu", "return false")
-if(document.body.contains(document.querySelector('.top-level')))
-{
-	let backBtn = document.querySelectorAll('.top-level')
-  backBtn.forEach((btn, index) => { 
-      btn.addEventListener("click", () => {
-      history.back();
-      });
-  });
-}
-</script>
-  <script>
-    setTimeout(removeBadge, 400);
-    function removeBadge ()
-    {
-    	let findLink = document.querySelectorAll('a');
-      for (let i = 0; i < findLink.length; i++)
-      { 
-      	if (findLink[i].href === "https://wized.com/?utm_campaign=badge")
-      		{
-            findLink[i].remove();
-          }
-      }
-    }
-    setTimeout(addBadge, 2000);
-    function addBadge ()
-    {
-    	let badge = document.createElement("div");
-      badge.innerHTML = `<div class="the-legends-dev-banner"><img src="https://assets.website-files.com/6474932b31758d71131214b7/6474932b31758d71131214a3_the_legends-logo-green.svg" loading="lazy" alt="" class="img_full"></div>`
-    	document.body.append(badge)
-    }
-</script>
-  <script>
-// Id in url to be removed
-// when the DOM is ready
-$(document).ready(function() {
-  // get the anchor link buttons
-  const menuBtn = $('.button-style-4');
-  const menuBtn2 = $('.button-style-2');
-  const iconBtn = $('.form-indicator-icon');
-  // when each button is clicked
-  menuBtn.click(()=>{	
-    // set a short timeout before taking action
-    // so as to allow hash to be set
-    setTimeout(()=>{
-      // call removeHash function after set timeout
-      removeHash();
-    }, 0); // 5 millisecond timeout in this case
-  });
-    menuBtn2.click(()=>{	
-    // set a short timeout before taking action
-    // so as to allow hash to be set
-    setTimeout(()=>{
-      // call removeHash function after set timeout
-      removeHash();
-    }, 0); // 5 millisecond timeout in this case
-  });
-     iconBtn.click(()=>{	
-    // set a short timeout before taking action
-    // so as to allow hash to be set
-    setTimeout(()=>{
-      // call removeHash function after set timeout
-      removeHash();
-    }, 0); // 5 millisecond timeout in this case
-  });
-  // removeHash function
-  // uses HTML5 history API to manipulate the location bar
-  function removeHash(){
-    history.replaceState('', document.title, window.location.origin + 		     window.location.pathname + window.location.search);
-  }
-});
-/**
-* another way to skin the same cat 
-*
-* $('.links').click(function(e){ 
-*	 $('html, body').animate({
-*   scrollTop: $( $.attr(this, 'href') ).offset().top - $('.nav').height()
-*	 }, 1000);
-*  return false;
-* });
-*/
-</script>
+  <script src="js/other/misc.js" type="text/javascript"></script>
 </body>
 </html>
