--- a/guides.html
+++ b/guides.html
@@ -69,6 +69,7 @@ align-items: center;
     overflow-x: hidden;
 }
 </style>
+  <link rel="manifest" href="manifest.json" />
   <script src="https://cdn.jsdelivr.net/gh/native-jeremy/the-legends-config/js/member/userAuth.js" type="text/javascript"></script>
 </head>
 <body>
@@ -361,94 +362,8 @@ align-items: center;
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
-  <script>
-//document.body.setAttribute("oncontextmenu", "return false")
-if(document.body.contains(document.querySelector('.top-level')))
-{
-	let backBtn = document.querySelectorAll('.top-level')
-  backBtn.forEach((btn, index) => { 
-      btn.addEventListener("click", () => {
-      history.back();
-      });
-  });
-}
-</script>
-  <script>
-    setTimeout(removeBadge, 400);
-    function removeBadge ()
-    {
-    	let findLink = document.querySelectorAll('a');
-      for (let i = 0; i < findLink.length; i++)
-      { 
-      	if (findLink[i].href === "https://wized.com/?utm_campaign=badge")
-      		{
-            findLink[i].remove();
-          }
-      }
-    }
-    setTimeout(addBadge, 2000);
-    function addBadge ()
-    {
-    	let badge = document.createElement("div");
-      badge.innerHTML = `<div class="the-legends-dev-banner"><img src="https://assets.website-files.com/6474932b31758d71131214b7/6474932b31758d71131214a3_the_legends-logo-green.svg" loading="lazy" alt="" class="img_full"></div>`
-    	document.body.append(badge)
-    }
-</script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-  <script>
-window.onload = async () => {  
-    Wized.request.await("Load Guide", (response) => {
-        setTimeout(SlideInfo, 2000);
-        function SlideInfo() {   
-    	const snapshot = response.data;
-     	const titles = snapshot.Slides_Titles;
-     	const descs = snapshot.Slides_Descriptions;
-      const completeButton = document.querySelector(".complete_guide");
-    	let titlesCol = titles.split("," + "\n");
-    	let descsCol = descs.split("," + "\n");
-       document.title = snapshot.Name; 
-       const swiper = new Swiper('.guide-slider', {
-          speed: 1000,
-          loop: false,
-          observer: true,
-          autoHeight: true,
-          observeParents: true,
-          slidesPerView: 1,
-          shortSwipes: true,
-          watchSlidesProgress: true,
-          initialSlide: 0,
-          navigation: {
-            nextEl: '.right-slide-arrow-button',
-            prevEl: '.left-slide-arrow-button',
-          },
-        });
-        swiper.on('reachEnd', function(){
-            completeButton.style.display = "flex";
-         });
-         swiper.on('slideChange', function (e) {
-            if(swiper.activeIndex == swiper.slides.length - 1)
-            {
-                completeButton.style.display = "flex";
-            }
-            else {
-                completeButton.style.display = "none";
-            }
-        });
-        completeButton.addEventListener('click', () => {
-        	setTimeout(() => {
-          	history.back()
-          }, 3000)
-        });
-        let slide = document.querySelectorAll('.swiper-slide');
-        let heading = document.querySelectorAll('.slide-heading');
-        let bodyCopy = document.querySelectorAll('.slide-body-copy');
-          for (let i = 0; i < slide.length; i++) {
-            heading[i].innerHTML = titlesCol[i]
-            bodyCopy[i].innerHTML = descsCol[i]
-          }
-        }
-    })
-};
-</script>
+  <script src="js/other/misc.js" type="text/javascript"></script>
+  <script src="js/guides/guides.js" type="text/javascript"></script>
 </body>
 </html>
