--- a/learning-hub.html
+++ b/learning-hub.html
@@ -60,6 +60,7 @@
 	}
 }
 </style>
+  <link rel="manifest" href="manifest.json" />
   <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
 </head>
 <body>
@@ -444,81 +445,7 @@ overflow-x: hidden;
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
-  <script>
-//document.body.setAttribute("oncontextmenu", "return false")
-if(document.body.contains(document.querySelector('.top-level')))
-{
-	let backBtn = document.querySelectorAll('.top-level')
-  backBtn.forEach((btn, index) => { 
-      btn.addEventListener("click", () => {
-      history.back();
-      });
-  });
-}
-</script>
-  <script>
-    setTimeout(removeBadge, 400);
-    function removeBadge ()
-    {
-    	let findLink = document.querySelectorAll('a');
-      for (let i = 0; i < findLink.length; i++)
-      { 
-      	if (findLink[i].href === "https://wized.com/?utm_campaign=badge")
-      		{
-            findLink[i].remove();
-          }
-      }
-    }
-    setTimeout(addBadge, 2000);
-    function addBadge ()
-    {
-    	let badge = document.createElement("div");
-      badge.innerHTML = `<div class="the-legends-dev-banner"><img src="https://assets.website-files.com/6474932b31758d71131214b7/6474932b31758d71131214a3_the_legends-logo-green.svg" loading="lazy" alt="" class="img_full"></div>`
-    	document.body.append(badge)
-    }
-</script>
-  <script src="https://cdn.jsdelivr.net/gh/native-jeremy/the-legends-config/js/member/userAuth.js" type="text/javascript"></script>
-  <script>
-// Start Vue Intializer
-const { createApp } = Vue;
-createApp({
-  data() {
-    return {
-      User: null,
-      Page: null,
-      HeroImage: null,
-      Guides: null,
-      Blogs: null,
-      Tutorials: null,
-    };
-  },
-  created() {
-  Wized.request.await("Load Users Learn", (response) => {
-    this.User = response.data;
-  });
-  Wized.request.await("Load Page", (response) => {
-    this.Page = response.data[0];
-    this.HeroImage = response.data[0].Hero_Image[0].url;
-  });
-  Wized.request.await("Load Guides - LEARN", (response) => {
-    this.Guides = response.data;
-  });
-  Wized.request.await("Load Blogs - LEARN", (response) => {
-    this.Blogs = response.data;
-  });
-  Wized.request.await("Load Tutorials - LEARN", (response) => {
-    this.Tutorials = response.data;
-  });
-  },
-  mounted() {
-    console.log("interaction loaded");
-    window.Webflow && window.Webflow.destroy();
-    window.Webflow && window.Webflow.ready();
-    window.Webflow && window.Webflow.require("ix2").init();
-    document.dispatchEvent(new Event("readystatechange"));
-  },
-}).mount("#app");
-// End Vue Intializer
-</script>
+  <script src="js/other/misc.js" type="text/javascript"></script>
+  <script src="js/other/learning-hub.js" type="text/javascript"></script>
 </body>
 </html>
