--- a/messages.html
+++ b/messages.html
@@ -60,6 +60,7 @@
 	}
 }
 </style>
+<link rel="manifest" href="manifest.json" />
 </head>
 <body>
   <div class="global-app-css w-embed">
@@ -413,90 +414,7 @@ overflow-x: hidden;
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
-  <script>
-//document.body.setAttribute("oncontextmenu", "return false")
-if(document.body.contains(document.querySelector('.top-level')))
-{
-	let backBtn = document.querySelectorAll('.top-level')
-  backBtn.forEach((btn, index) => { 
-      btn.addEventListener("click", () => {
-      history.back();
-      });
-  });
-}
-</script>
-  <script>
-    setTimeout(removeBadge, 400);
-    function removeBadge ()
-    {
-    	let findLink = document.querySelectorAll('a');
-      for (let i = 0; i < findLink.length; i++)
-      { 
-      	if (findLink[i].href === "https://wized.com/?utm_campaign=badge")
-      		{
-            findLink[i].remove();
-          }
-      }
-    }
-    setTimeout(addBadge, 2000);
-    function addBadge ()
-    {
-    	let badge = document.createElement("div");
-      badge.innerHTML = `<div class="the-legends-dev-banner"><img src="https://assets.website-files.com/6474932b31758d71131214b7/6474932b31758d71131214a3_the_legends-logo-green.svg" loading="lazy" alt="" class="img_full"></div>`
-    	document.body.append(badge)
-    }
-</script>
-  <script src="https://cdn.jsdelivr.net/gh/native-jeremy/the-legends-config/js/member/userAuth.js" type="text/javascript"></script>
-  <script>
-window.onload = async () => {
-    Wized.request.await("Load Users", (response) => {
-      let snapshot = response.data;
-      console.log("User Data: ", snapshot);
-      let messagesRecieved = snapshot.General_Messages;
-      let messagesRead = []
-      let messageButton = document.getElementById('message_button')
-      if(snapshot.Read_Messages)
-      {
-        snapshot.Read_Messages.forEach(message => {
-            messagesRead.push(message);
-        });
-      }
-      setTimeout(() => {
-        const message = document.querySelectorAll(".message");
-        const messageID = document.querySelectorAll(".id");
-        const messageIcon = document.querySelectorAll(".message-icon");
-        if (messagesRead.length > 0) {
-          for (let i = 0; i < message.length; i++) {
-            for (let n = 0; n < messagesRead.length; n++) {
-              if (messagesRead[n].includes(messageID[i].textContent)) {
-                messageIcon[i].classList.add("not_read");
-              }
-            }
-          }
-        }
-        for (let i = 0; i < message.length; i++) {
-          // Dynamic message
-          let userName = message[i].innerHTML;
-          userName = userName.replaceAll("NAME", snapshot.FirstName);
-          let userProgram = userName;
-          userProgram = userProgram.replaceAll("PROGRAM", snapshot.Program_Name[0]);
-          let personalText = userProgram
-          message[i].innerHTML = personalText;
-          // Adding message to "readMessages" array
-          message[i].addEventListener("click", () => {
-          	messageButton.style.display = "none"
-            messagesRead.push(messageID[i].textContent);
-            document.querySelectorAll(".message-icon")[i].classList.add("not_read");
-            Wized.data.setVariable("messagelist", messagesRead);
-            Wized.data.listen("v.messagelist", async () => {    
-                Wized.data.get("v.messagelist");
-            });
-            Wized.data.setVariable("readmessages", true);
-          });
-        }
-      }, 1000);
-    });
-  };
-    </script>
+  <script src="js/other/misc.js" type="text/javascript"></script>
+  <script src="js/user/messages.js" type="text/javascript"></script>
 </body>
 </html>
