--- a/program-hub-welcome.html
+++ b/program-hub-welcome.html
@@ -68,6 +68,7 @@
 	transition: 1s linear 1s;	
 }
 </style>
+<link rel="manifest" href="manifest.json" />
 </head>
 <body>
   <div class="global-app-css w-embed">
@@ -335,59 +336,6 @@ overflow-x: hidden;
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
-  <script>
-//document.body.setAttribute("oncontextmenu", "return false")
-if(document.body.contains(document.querySelector('.top-level')))
-{
-	let backBtn = document.querySelectorAll('.top-level')
-  backBtn.forEach((btn, index) => { 
-      btn.addEventListener("click", () => {
-      history.back();
-      });
-  });
-}
-</script>
-  <script>
-    setTimeout(removeBadge, 400);
-    function removeBadge ()
-    {
-    	let findLink = document.querySelectorAll('a');
-      for (let i = 0; i < findLink.length; i++)
-      { 
-      	if (findLink[i].href === "https://wized.com/?utm_campaign=badge")
-      		{
-            findLink[i].remove();
-          }
-      }
-    }
-    setTimeout(addBadge, 2000);
-    function addBadge ()
-    {
-    	let badge = document.createElement("div");
-      badge.innerHTML = `<div class="the-legends-dev-banner"><img src="https://assets.website-files.com/6474932b31758d71131214b7/6474932b31758d71131214a3_the_legends-logo-green.svg" loading="lazy" alt="" class="img_full"></div>`
-    	document.body.append(badge)
-    }
-</script>
-  <script src="https://cdn.jsdelivr.net/gh/native-jeremy/the-legends-config/js/member/userAuth.js" type="text/javascript"></script>
-  <!-- <script>
-	window.onload = async () => {  
-    Wized.request.await("Load Users", (response) => {
-    	const snapshot = response.data;
-      let answers = snapshot.Answers;
-      console.log(response); // Log request response  
-      if (snapshot.Stripe == "Not Verified") {
-      window.location.href = "/program-selection";
-    	}
-    	let answersCol = answers.split("," + "\n");
-      let stop = setTimeout(answerInfo, 1000);
-      function answerInfo() {
-        clearTimeout(stop);
-        console.log(answersCol);
-       }
-    Wized.data.setVariable("array", answersCol);
-    console.log(Wized.data.get("v.array"))
-    })
-};
-</script> -->
+  <script src="js/other/misc.js" type="text/javascript"></script>
 </body>
 </html>
