--- a/program-hub.html
+++ b/program-hub.html
@@ -72,6 +72,7 @@
   	display: flex;
   }
 </style>
+  <link rel="manifest" href="manifest.json" />
   <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
 </head>
 <body>
@@ -499,165 +500,11 @@ overflow-x: hidden;
       <div class="program_loading_text style-2">Please wait</div>
     </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/gh/tigrr/circle-progress/dist/circle-progress.min.js" type="text/javascript"></script>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
-  <script>
-//document.body.setAttribute("oncontextmenu", "return false")
-if(document.body.contains(document.querySelector('.top-level')))
-{
-	let backBtn = document.querySelectorAll('.top-level')
-  backBtn.forEach((btn, index) => { 
-      btn.addEventListener("click", () => {
-      history.back();
-      });
-  });
-}
-</script>
-  <script>
-    setTimeout(removeBadge, 400);
-    function removeBadge ()
-    {
-    	let findLink = document.querySelectorAll('a');
-      for (let i = 0; i < findLink.length; i++)
-      { 
-      	if (findLink[i].href === "https://wized.com/?utm_campaign=badge")
-      		{
-            findLink[i].remove();
-          }
-      }
-    }
-    setTimeout(addBadge, 2000);
-    function addBadge ()
-    {
-    	let badge = document.createElement("div");
-      badge.innerHTML = `<div class="the-legends-dev-banner"><img src="https://assets.website-files.com/6474932b31758d71131214b7/6474932b31758d71131214a3_the_legends-logo-green.svg" loading="lazy" alt="" class="img_full"></div>`
-    	document.body.append(badge)
-    }
-</script>
-  <script src="https://cdn.jsdelivr.net/gh/native-jeremy/the-legends-config/js/member/userAuth.js" type="text/javascript"></script>
-  <script src="https://cdn.jsdelivr.net/gh/tigrr/circle-progress/dist/circle-progress.min.js" type="text/javascript"></script>
-  <script>
-Wized.request.await("Load Users Program Hub", (response) => {
-    const currentUser = response.data;
-    let currentWeek;
-    let programDone;
-    if(currentUser.User_Week_Tracker > currentUser.Count_weeks[0])
-    {
-    	//currentWeek = currentUser.Count_weeks[0]
-      currentWeek = currentUser.Program_Week_Tracker
-    }
-    else {
-    	//currentWeek = currentUser.User_Week_Tracker
-      currentWeek = currentUser.Program_Week_Tracker
-    }
-    if(currentUser.Program_Tracker_Percentage == '100%')
-    {
-    	programDone = true;
-    }
-    // Console.log Request
-    //console.log("User Request:", currentUser);
-    Wized.request.await("Load Program", (response) => {
-        const program = response.data;
-        // Console.log Request
-        //console.log("Current Program Request:", program);
-        Wized.request.await("Load weeks - HUB", (response) => {
-            const currentProgram = response.data;
-            // Console.log Request
-            //console.log("Program Request:", currentProgram);
-            const CompletedAmount = [];
-            let nextWorkoutStatic = false;
-            let nextWorkoutIDStatic = null;
-            currentProgram.forEach((WeekEl, index) => {
-                    CompletedAmount.push({Week: WeekEl.Week, WorkoutName: WeekEl.Workout_Names, WorkoutID: WeekEl.Workouts, AmountCompleted: 0});
-            });
-            if("Completed_Workout_Week" in currentUser)
-            {
-                CompletedAmount.forEach((total, index) => {
-                    if(currentUser.Completed_Workout_ID.some((id) => CompletedAmount[index].WorkoutID.includes(id)) && currentUser.Completed_Workout_Week.some((item) => CompletedAmount[index].Week.includes(item)))
-                    {
-                        CompletedAmount[index].AmountCompleted = CompletedAmount[index].AmountCompleted + 1;
-                    }
-                    else
-                    {
-                        CompletedAmount[index].WorkoutID.forEach((workout, id) => {
-                            if(currentUser.Completed_Workout_ID.some((item) => item !== workout))
-                            {
-                                if(nextWorkoutStatic == false)
-                                {
-                                    nextWorkoutStatic = true;
-                                    nextWorkoutIDStatic = workout;
-                                }
-                                else {
-                                    return false;
-                                }
-                            }
-                        });
-                    }
-                });
-            }
-        // Start Vue Intializer
-        const { createApp } = Vue
-        createApp({
-        data() {
-            return {
-            User: currentUser,
-            Program: currentProgram,
-            ProgramImage: currentUser.Program_Image,
-            SessionAmount: currentUser.Q7[0],
-            UserWeek: currentWeek,
-            CurrentProgram: program,
-            Recoveries: null,
-            CompletedWorkouts: null,
-            nextWorkout: false,
-            nextWorkoutID: null,
-            programPop: programDone
-            }
-        },
-        created() {
-            const programLoader = document.getElementById("programLoading");
-            programLoader.classList.add("hide_program_loader")
-            this.CompletedWorkouts = CompletedAmount;
-            this.nextWorkout = nextWorkoutStatic;
-            this.nextWorkoutID = nextWorkoutIDStatic;
-            const getData = async () => {
-                let data = await Wized.data.get("v.response");
-                this.Recoveries = data;
-                return data;
-            }
-            getData().then(data => console.log('Loaded'));
-            /*Wized.request.await("Load Recoveries", (response) => {    
-                this.Recoveries = response.data
-            });*/
-        },
-        mounted() {
-           // console.log('Recoveries', this.Recoveries)
-            console.log("interaction loaded");
-            window.Webflow && window.Webflow.destroy();
-            window.Webflow && window.Webflow.ready();
-            window.Webflow && window.Webflow.require("ix2").init();
-            document.dispatchEvent(new Event("readystatechange"));
-            //console.log("Completed Array", this.CompletedWorkouts)
-            //console.log("Next Workout", this.nextWorkoutID)
-             //console.log("Progress", this.ProgramCompleted)
-						if("Completed_Workout_Week" in currentUser)
-            {
-            // Progress Wheel
-            const workoutEl = document.querySelectorAll(".workouts");
-            let progressNum = this.User.Completed_Workouts.length / workoutEl.length * 100;
-            const circleProgress = new CircleProgress(".circle-latest");
-            circleProgress.attr({
-            max: 100,
-            value: progressNum,
-            textFormat: "percent",
-            indeterminateText: 0,
-            });
-            }
-        }
-        }).mount('#app')
-        // End Vue Intializer
-        });
-    });
-});
-</script>
+  <script src="js/other/misc.js" type="text/javascript"></script>
+  <script src="js/user/userAuth.js" type="text/javascript"></script>
+  <script src="js/programs/program-hub.js" type="text/javascript"></script>
 </body>
 </html>
