--- a/questionnaire.html
+++ b/questionnaire.html
@@ -63,25 +63,26 @@
   <style>
  ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   color: white !important;
-  opacity 1 !important;
+  opacity: 1 !important;
 }
 ::-moz-placeholder { /* Firefox 19+ */
   color: white !important;
-  opacity 1 !important;
+  opacity: 1 !important;
 }
 :-ms-input-placeholder { /* IE 10+ */
   color: white !important;
-  opacity 1 !important;
+  opacity: 1 !important;
 }
 :-moz-placeholder { /* Firefox 18- */
   color: white !important;
-  opacity 1 !important;
+  opacity: 1 !important;
 }
 input {
     line-height: normal !important;
     appearance: unset !important;
 }
 </style>
+<link rel="manifest" href="manifest.json" />
 </head>
 <body>
   <div class="global-app-css w-embed">
@@ -345,168 +346,8 @@ overflow-x: hidden;
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
-  <script>
-//document.body.setAttribute("oncontextmenu", "return false")
-if(document.body.contains(document.querySelector('.top-level')))
-{
-	let backBtn = document.querySelectorAll('.top-level')
-  backBtn.forEach((btn, index) => { 
-      btn.addEventListener("click", () => {
-      history.back();
-      });
-  });
-}
-</script>
-  <script>
-    setTimeout(removeBadge, 400);
-    function removeBadge ()
-    {
-    	let findLink = document.querySelectorAll('a');
-      for (let i = 0; i < findLink.length; i++)
-      { 
-      	if (findLink[i].href === "https://wized.com/?utm_campaign=badge")
-      		{
-            findLink[i].remove();
-          }
-      }
-    }
-    setTimeout(addBadge, 2000);
-    function addBadge ()
-    {
-    	let badge = document.createElement("div");
-      badge.innerHTML = `<div class="the-legends-dev-banner"><img src="https://assets.website-files.com/6474932b31758d71131214b7/6474932b31758d71131214a3_the_legends-logo-green.svg" loading="lazy" alt="" class="img_full"></div>`
-    	document.body.append(badge)
-    }
-</script>
-  <!-- <script defer src="https://cdn.jsdelivr.net/gh/native-jeremy/the-legends-config/js/questionnaire-u18.js" type="text/javascript"></script> -->
-  <script>
-window.onload = async () => {
-    Wized.request.await("Load Questionnaire", (response) => {    
-    const snapshot = response.data;
-    const email = document.getElementById("Email");
-    const emailErr = document.querySelector('.email_tooltip');
-    const emailValid = document.getElementById("emailValid");
-    const emailNotValid = document.getElementById("emailNotValid");
-    email.addEventListener('keyup', () => {
-      snapshot.forEach(user => {
-        if(snapshot.find(user => user.Email == email.value))
-        {
-            emailErr.classList.remove('hide_tooltip')
-            emailValid.classList.add('hide')
-            emailNotValid.classList.remove('hide')
-        }
-        else {
-            emailErr.classList.add('hide_tooltip')
-            emailValid.classList.remove('hide')
-            emailNotValid.classList.add('hide')
-        }
-      });
-    });
-})
-  // Checked arrays created to hold data
-  let question4CheckedArray = [];
-  let question6CheckedArray = [];
-  // Checkbox element declaration
-  const checkboxesQ4 = document
-    .getElementById("question-4")
-    .querySelectorAll('input[type="checkbox"]');
-  const labelsQ4 = document
-    .getElementById("question-4")
-    .querySelectorAll(".checkbox_text");
-  const checkboxesQ6 = document
-    .getElementById("question-6")
-    .querySelectorAll('input[type="checkbox"]');
-  const labelsQ6 = document
-    .getElementById("question-6")
-    .querySelectorAll(".checkbox_text");
-  // Checkbox event listener for change event
-  for (let i = 0; i < checkboxesQ4.length; i++) {
-    const checkbox = checkboxesQ4[i];
-    const label = labelsQ4[i];
-    checkbox.addEventListener("change", () => {
-      if (checkbox.checked === true) {
-        question4CheckedArray.push(label.textContent);
-        Wized.data.setVariable("Question4",question4CheckedArray);
-      } else {
-        const findIndex = question4CheckedArray.indexOf(label.textContent);
-        if (findIndex > -1) {
-          question4CheckedArray.splice(findIndex, 1);
-          Wized.data.setVariable("Question4",question4CheckedArray);
-        }
-      }
-    });
-  }
-  for (let i = 0; i < checkboxesQ6.length; i++) {
-    const checkbox = checkboxesQ6[i];
-    const label = labelsQ6[i];
-    checkbox.addEventListener("change", () => {
-      if (checkbox.checked === true) {
-        question6CheckedArray.push(label.textContent);
-        Wized.data.setVariable("Question6",question6CheckedArray);
-      } else {
-        const findIndex = question6CheckedArray.indexOf(label.textContent);
-        if (findIndex > -1) {
-          question6CheckedArray.splice(findIndex, 1);
-          Wized.data.setVariable("Question6",question6CheckedArray);
-        }
-      }
-    });
-  }
-  Wized.data.listen("v.Question4", async () => {
-    const question4Applied = await Wized.data.get("v.Question4"); // Get new value
-  });
-  Wized.data.listen("v.Question6", async () => {
-    const question6Applied = await Wized.data.get("v.Question6"); // Get new value
-  });
-};
-  $(document).ready(function () {
-    // get the anchor link buttons
-    const menuBtn = $(".button-style-4");
-    const menuBtn2 = $(".button-style-2-2");
-    const menuBtn3 = $(".button-style-1-2");
-    const iconBtn = $(".form-indicator-icon");
-    // when each button is clicked
-    menuBtn.click(() => {
-      // set a short timeout before taking action
-      // so as to allow hash to be set
-      setTimeout(() => {
-        // call removeHash function after set timeout
-        removeHash();
-      }, 0);
-    });
-    menuBtn2.click(() => {
-      // set a short timeout before taking action
-      // so as to allow hash to be set
-      setTimeout(() => {
-        // call removeHash function after set timeout
-        removeHash();
-      }, 0); // 5 millisecond timeout in this case
-    });
-    menuBtn3.click(() => {
-      // set a short timeout before taking action
-      // so as to allow hash to be set
-      setTimeout(() => {
-        // call removeHash function after set timeout
-        removeHash();
-      }, 0); // 5 millisecond timeout in this case
-    });
-    iconBtn.click(() => {
-      // set a short timeout before taking action
-      // so as to allow hash to be set
-      setTimeout(() => {
-        // call removeHash function after set timeout
-        removeHash();
-      }, 0);
-    });
-    // removeHash function
-    // uses HTML5 history API to manipulate the location bar
-    function removeHash() {
-      history.replaceState(
-        "",
-        document.title,
-        window.location.origin + window.location.pathname + window.location.search
-      )}
-    });
+  <script src="js/other/misc.js" type="text/javascript"></script>
+  <script src="js/questionnaire/questionnaire-default.js" type="text/javascript"></script>
 </script>
 </body>
 </html>
