--- a/recipe-hub.html
+++ b/recipe-hub.html
@@ -65,6 +65,7 @@
 	display: none !important;
 }
 </style>
+  <link rel="manifest" href="manifest.json" />
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
@@ -605,295 +606,7 @@ overflow-x: hidden;
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
-  <script>
-//document.body.setAttribute("oncontextmenu", "return false")
-if(document.body.contains(document.querySelector('.top-level')))
-{
-	let backBtn = document.querySelectorAll('.top-level')
-  backBtn.forEach((btn, index) => { 
-      btn.addEventListener("click", () => {
-      history.back();
-      });
-  });
-}
-</script>
-  <script>
-    setTimeout(removeBadge, 400);
-    function removeBadge ()
-    {
-    	let findLink = document.querySelectorAll('a');
-      for (let i = 0; i < findLink.length; i++)
-      { 
-      	if (findLink[i].href === "https://wized.com/?utm_campaign=badge")
-      		{
-            findLink[i].remove();
-          }
-      }
-    }
-    setTimeout(addBadge, 2000);
-    function addBadge ()
-    {
-    	let badge = document.createElement("div");
-      badge.innerHTML = `<div class="the-legends-dev-banner"><img src="https://assets.website-files.com/6474932b31758d71131214b7/6474932b31758d71131214a3_the_legends-logo-green.svg" loading="lazy" alt="" class="img_full"></div>`
-    	document.body.append(badge)
-    }
-</script>
-  <script src="https://cdn.jsdelivr.net/gh/native-jeremy/the-legends-config/js/member/userAuth.js" type="text/javascript"></script>
-  <script>
-// URL FILTERING
-// Url search parameters
-let params = new URL(document.location).searchParams;
-let url = window.location.href;
-// Object Url Search
-let entries = params.keys();
-let parameters = params.keys();
-let paramsArray = [];
-let recipeData;
-let recipeNumberCheck = [];
-// Checking For Parameters
-if (url.includes("?")) {
-  console.log("Params", parameters);
-  for (key of parameters) {
-    paramsArray.push(key.replace("-", " "));
-    localStorage.setItem("RecipeFilters", JSON.stringify(paramsArray));
-  }
-} else {
-  let filterURL = JSON.parse(localStorage.getItem("RecipeFilters"));
-  console.log("Filter Local Storage", filterURL);
-  let parameter = "?";
-  if(filterURL !== null) {
-    filterURL.forEach((filter, index) => {
-      if (filter[index + 1] >= filterURL.length) {
-        parameter = parameter + filter.replace(" ", "-");
-      } else {
-        parameter = parameter + filter.replace(" ", "-") + "&";
-      }
-      window.location.href = window.location.href + parameter;
-    });
-  }
-  console.log("No Parameters Found!");
-}
-// END URL FILTERING
-let recipesStoredInLocalStorage = JSON.parse(localStorage.getItem("recipes_stored"))
-// Start Vue Intializer
-const { createApp } = Vue;
-createApp({
-  data() {
-    return {
-      User: {},
-      Favourites: [],
-      Breakfast: [],
-      HeroImage: '',
-      Lunch: [],
-      Dinner: [],
-      Snacks: [],
-      Favourites: [],
-      Filters: [],
-      RecipesStored: false,
-      RecipesParsed: [],
-      RecipesArray: [],
-      FavouritesActive: false,
-    };
-  },
-  methods: {
-    clearFilters()
-    {
-      localStorage.removeItem("RecipeFilters");
-      window.location.href = "/recipe-hub";
-    },
-    shuffleNewRecipes()
-    {
-      window.location.href = window.location.href;
-      localStorage.removeItem("recipes_stored")
-    }
-  },
-  created() {
-  let tempFilters = JSON.parse(localStorage.getItem("RecipeFilters"));
-  if(tempFilters != null)
-  {
-    tempFilters.forEach((filter, index) => {filter.replace("-", " ")});
-  }
-  else {
-    tempFilters = [];
-  }
- if(recipesStoredInLocalStorage !== null)
- {
-  Wized.request.await("Load Users Recipes", (response) => {
-    this.User = response.data;
-    // Favourites Getter
-    if(!("Favourite_Recipes" in response.data))
-    {
-      this.FavouritesActive = false;
-    }
-    else {
-      this.Favourites = response.data.Favourite_Recipes;
-      this.FavouritesActive = true;
-    }
-    // Recipe Getter
-    if(recipesStoredInLocalStorage !== null)
-    { 
-      let tempRecipes = JSON.parse(response.data.Recipes_Stored);
-      this.RecipesParsed = JSON.parse(response.data.Recipes_Stored);
-      console.log('Recipes From Airtable', tempRecipes)
-      this.Breakfast = tempRecipes[0]
-      this.HeroImage = this.Breakfast[0].Images[0].url.toString(); 
-      this.Lunch = tempRecipes[1]
-      this.Dinner = tempRecipes[2]
-      this.Snacks = tempRecipes[3]
-    }
-    else {
-      this.RecipesStored = true;
-    }
-  });
-}
-else 
-{
-  Wized.request.await("Load Users Recipes", (response) => {
-    this.User = response.data;
-    // Favourites Getter
-    if(!("Favourite_Recipes" in response.data))
-    {
-      this.FavouritesActive = false;
-    }
-    else {
-      this.Favourites = response.data.Favourite_Recipes;
-      this.FavouritesActive = true;
-    }
-  });
-  Wized.request.await("Load Recipes - Breakfast", (response) => {
-    let newArr = response.data.map((item) => {
-      return {
-        Name: item.Name,
-        ID: item.ID,
-        Images: item.Images,
-        Dietary_Require: item.Dietary_Require,
-        Time: item.Time
-      }
-    });
-    const recipeType = shuffleArray(newArr, tempFilters);
-    this.Breakfast = recipeType
-    this.HeroImage = recipeType[0].Images[0].url;
-    this.RecipesArray.push(recipeType);
-  });
-  Wized.request.await("Load Recipes - Lunch", (response) => {
-    let newArr = response.data.map((item) => {
-      return {
-        Name: item.Name,
-        ID: item.ID,
-        Images: item.Images,
-        Dietary_Require: item.Dietary_Require,
-        Time: item.Time
-      }
-    });
-    const recipeType = shuffleArray(newArr, tempFilters);
-    this.Lunch = recipeType
-    this.RecipesArray.push(recipeType);
-  });
-  Wized.request.await("Load Recipes - Dinner", (response) => {
-    let newArr = response.data.map((item) => {
-      return {
-        Name: item.Name,
-        ID: item.ID,
-        Images: item.Images,
-        Dietary_Require: item.Dietary_Require,
-        Time: item.Time
-      }
-    });
-    const recipeType = shuffleArray(newArr, tempFilters);
-    this.Dinner = recipeType
-    this.RecipesArray.push(recipeType);
-  });
-  Wized.request.await("Load Recipes - Snacks", (response) => {
-    let newArr = response.data.map((item) => {
-      return {
-        Name: item.Name,
-        ID: item.ID,
-        Images: item.Images,
-        Dietary_Require: item.Dietary_Require,
-        Time: item.Time
-      }
-    });
-    const recipeType = shuffleArray(newArr, tempFilters);
-    this.Snacks = recipeType
-    this.RecipesArray.push(recipeType);
-  });
-}
-  // Suffle Feature Code
-  function shuffleArray(array, tempFilters) {
-    let shuffleArray = [];
-    let usedIndices = [];
-    let i = 0;
-    while(i < 7) {
-      let randomIndex = Math.floor(Math.random() * array.length);
-      if(tempFilters.length !== 0)
-      {
-        if(!usedIndices.includes(randomIndex) && array[randomIndex].Dietary_Require.some((name) => tempFilters.includes(name))) {
-          shuffleArray.push(array[randomIndex]);
-          usedIndices.push(randomIndex);
-          i++;
-        }
-      }
-      else {
-        if(!usedIndices.includes(randomIndex))
-        {
-          shuffleArray.push(array[randomIndex]);
-          usedIndices.push(randomIndex);
-          i++;
-        }
-      }
-    }
-    console.log("Array Updated", shuffleArray);
-    return shuffleArray;
-  }
-  },
-  mounted() {
-    console.log("interaction loaded");
-    window.Webflow && window.Webflow.destroy();
-    window.Webflow && window.Webflow.ready();
-    window.Webflow && window.Webflow.require("ix2").init();
-    document.dispatchEvent(new Event("readystatechange"));
-    // Matching filters to checkboxes
-    let check = document.querySelectorAll('[type="checkbox"]');
-    let checkCustom = document.querySelectorAll(".w-checkbox-input");
-    let RecipeFilters = JSON.parse(localStorage.getItem("RecipeFilters"));
-    if(RecipeFilters != null) {
-        // Checking filters are active
-        RecipeFilters.forEach((filter) => {
-         check.forEach((checkInfo, index) => {
-            if (filter.includes(checkInfo.name.replace("-"," "))) {
-              checkCustom[index].classList.add("w--redirected-checked");
-              check[index].checked = true;
-            }
-          });
-        });
-    }
-  },
-  updated() {
-    if(recipesStoredInLocalStorage == null && this.RecipesStored !== true)
-    {
-      let recipesSetLocalStorage = localStorage.setItem("recipes_stored", "true")
-      JSON.stringify(recipesSetLocalStorage);
-      setTimeout(() => {
-      // Setting recipes
-      //const recipes = [this.Breakfast, this.Lunch, this.Dinner, this.Snacks]
-        Wized.data.setVariable("recipestored", JSON.stringify(this.RecipesArray));
-      }, 3000)
-    }
-    else {
-      /*console.log("User updated", this.User);
-      console.log("Filters updated", this.Filters);
-      console.log("Breakfast image loaded", this.HeroImage);
-      console.log("Breakfast loaded", this.Breakfast);
-      console.log("Lunch loaded", this.Lunch);
-      console.log("Dinner loaded", this.Dinner);
-      console.log("Snacks loaded", this.Snacks);
-      console.log("Recipes Array loaded", this.RecipesArray);
-      console.log("Recipes Parsed loaded", this.RecipesParsed);*/
-      return false;
-    }
-  },
-}).mount("#app");
-// End Vue Intializer
-</script>
+  <script src="js/other/misc.js" type="text/javascript"></script>
+  <script src="js/recipes/recipe-hub.js" type="text/javascript"></script>
 </body>
 </html>
