--- a/recipe.html
+++ b/recipe.html
@@ -110,6 +110,7 @@
     }
   }
 </style>
+<link rel="manifest" href="manifest.json" />
 </head>
 <body>
   <div class="global-app-css w-embed">
@@ -522,128 +523,8 @@ overflow-x: hidden;
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
-  <script>
-//document.body.setAttribute("oncontextmenu", "return false")
-if(document.body.contains(document.querySelector('.top-level')))
-{
-	let backBtn = document.querySelectorAll('.top-level')
-  backBtn.forEach((btn, index) => { 
-      btn.addEventListener("click", () => {
-      history.back();
-      });
-  });
-}
-</script>
-  <script>
-    setTimeout(removeBadge, 400);
-    function removeBadge ()
-    {
-    	let findLink = document.querySelectorAll('a');
-      for (let i = 0; i < findLink.length; i++)
-      { 
-      	if (findLink[i].href === "https://wized.com/?utm_campaign=badge")
-      		{
-            findLink[i].remove();
-          }
-      }
-    }
-    setTimeout(addBadge, 2000);
-    function addBadge ()
-    {
-    	let badge = document.createElement("div");
-      badge.innerHTML = `<div class="the-legends-dev-banner"><img src="https://assets.website-files.com/6474932b31758d71131214b7/6474932b31758d71131214a3_the_legends-logo-green.svg" loading="lazy" alt="" class="img_full"></div>`
-    	document.body.append(badge)
-    }
-</script>
   <script src="https://unpkg.com/showdown/dist/showdown.min.js" type="text/javascript"></script>
-  <script src="https://cdn.jsdelivr.net/gh/native-jeremy/the-legends-config/js/member/userAuth.js" type="text/javascript"></script>
-  <script>
-window.onload = async () => { 
- const favouriteBtn1 = document.getElementById("favourite-button1")
- const favouriteBtn2 = document.getElementById("favourite-button2")
- const favouriteBtn3 = document.getElementById("favourite-button3")
- const addedRecipe = document.getElementById("addedRecipe")
- Wized.request.await("Load Users Recipe", (response) => {
- const user = response.data.Favourites_ID;
- const snapshot = response.data;
-    if(snapshot.Stripe == "Not Verified") {
-      window.location.href = "/program-selection";
-    }
- console.log(user)
- let params = window.location.href;
- let url = new URL(params);
- let checkurl = url.searchParams;
- 	favouriteBtn1.addEventListener("click", () => {
-  	favouriteBtn1.style.display = "none";
-  	favouriteBtn2.style.display = "none";
-    favouriteBtn3.style.display = "none";
-  	addedRecipe.click();
-  });
-  favouriteBtn2.addEventListener("click", () => {
-   	favouriteBtn1.style.display = "none";
-  	favouriteBtn2.style.display = "none";
-    favouriteBtn3.style.display = "none";
-  	addedRecipe.click();
-  });
-  favouriteBtn3.addEventListener("click", () => {
-   	favouriteBtn1.style.display = "none";
-  	favouriteBtn2.style.display = "none";
-    favouriteBtn3.style.display = "none";
-  	addedRecipe.click();
-  });
- let currentRecipe = checkurl.get("recipe");
- if(user.includes(currentRecipe))
- { 
- 	favouriteBtn1.style.display = "none";
-  favouriteBtn2.style.display = "none";
-  favouriteBtn3.style.display = "none";
- }
- });
-    Wized.request.await("Load Recipe", (response) => {  
-    	const snapshot = response.data;
-      let method = snapshot.Method;
-      let Ingredients = snapshot.Ingredients;
-      const methodText = document.getElementById("method");
-      const ingredientsText = document.getElementById("ingredients");
-     	const foodInfo = snapshot.Food_Info;
-    	let foodInfoCol = foodInfo.split("," + "\n");
-      //setTimeout(RecipeInfo, 500);
-      if(response.status == 200)
-      {
-      let stop = setTimeout(RecipeInfo, 1000);
-      document.title = snapshot.Name;
-      var converter = new showdown.Converter(),
-    text      = Ingredients,
-    html      = converter.makeHtml(text);
-    ingredientsText.innerHTML = html;
-    var converter = new showdown.Converter(),
-    text      = method,
-    html      = converter.makeHtml(text);
-    methodText.innerHTML = html;   
-       }
-       function RecipeInfo() {
-       	let time = document.querySelectorAll('.recipe-info');
-        let heroTime = document.getElementById("recipe_time");
-        heroTime.innerHTML = foodInfoCol[0];
-        //let time = document.getElementById("time");
-        //let serves = document.getElementById("serves");
-        //let calories = document.getElementById("calories");
-        //let carbohydrate = document.getElementById("carbohydrate");
-        //let fatTotal = document.getElementById("fatTotal");
-        //let protein = document.getElementById("protein");
-        for (let i = 0; i < time.length; i++) {
-        time[i].innerHTML = foodInfoCol[i]
-        //serves.innerHTML = foodInfoCol[i]
-        //calories.innerHTML = foodInfoCol[i]
-        //carbohydrate.innerHTML = foodInfoCol[i]
-        //fatTotal.innerHTML = foodInfoCol[i]
-        //protein.innerHTML = foodInfoCol[i]
-        }
-        clearTimeout(stop);
-        console.log(foodInfoCol);
-        }
-    })
-};
-</script>
+  <script src="js/other/misc.js" type="text/javascript"></script>
+  <script src="js/recipes/recipe.js" type="text/javascript"></script>
 </body>
 </html>
