--- a/recovery-overview.html
+++ b/recovery-overview.html
@@ -94,6 +94,7 @@
     }
   }
 </style>
+<link rel="manifest" href="manifest.json" />
 </head>
 <body>
   <div class="global-app-css w-embed">
@@ -542,65 +543,8 @@ overflow-x: hidden;
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
-  <script>
-//document.body.setAttribute("oncontextmenu", "return false")
-if(document.body.contains(document.querySelector('.top-level')))
-{
-	let backBtn = document.querySelectorAll('.top-level')
-  backBtn.forEach((btn, index) => { 
-      btn.addEventListener("click", () => {
-      history.back();
-      });
-  });
-}
-</script>
-  <script>
-    setTimeout(removeBadge, 400);
-    function removeBadge ()
-    {
-    	let findLink = document.querySelectorAll('a');
-      for (let i = 0; i < findLink.length; i++)
-      { 
-      	if (findLink[i].href === "https://wized.com/?utm_campaign=badge")
-      		{
-            findLink[i].remove();
-          }
-      }
-    }
-    setTimeout(addBadge, 2000);
-    function addBadge ()
-    {
-    	let badge = document.createElement("div");
-      badge.innerHTML = `<div class="the-legends-dev-banner"><img src="https://assets.website-files.com/6474932b31758d71131214b7/6474932b31758d71131214a3_the_legends-logo-green.svg" loading="lazy" alt="" class="img_full"></div>`
-    	document.body.append(badge)
-    }
-</script>
-  <script src="https://cdn.jsdelivr.net/gh/native-jeremy/the-legends-config/js/member/userAuth.js" type="text/javascript"></script>
+  <script src="js/other/misc.js" type="text/javascript"></script>
   <script src="https://unpkg.com/showdown/dist/showdown.min.js" type="text/javascript"></script>
-  <script defer="" src="https://cdn.jsdelivr.net/gh/native-jeremy/the-legends-config/js/member/recovery-overview.js" type="text/javascript"></script>
-  <script>
-	setTimeout(() => {
-   const timeConvert = document.querySelectorAll('.convert_time');
-   timeConvert.forEach(time => {
-    if(parseInt(time.textContent) < 60)
-    {   time.textContent = time.textContent + " seconds";
-        //console.log("Standard Time Not Over 60 seconds", time.textContent);
-    }
-    else {
-        let timer = parseInt(time.textContent)
-        let = convertedTime = Math.floor(timer/ 60)
-        let extraSeconds = timer % 60;
-        if(!extraSeconds > 0)
-        {
-            time.textContent = convertedTime + " minutes";
-        }
-        else {
-            time.textContent = convertedTime + " minutes " + extraSeconds + " seconds";
-        }
-        //console.log("Correct Converted Time", convertedTime + " minutes " + extraSeconds + " seconds");
-    }
-   });
-}, 3000);
-</script>
+  <script src="js/recoveries/recovery-overview.js" type="text/javascript"></script>
 </body>
 </html>
