--- a/workout-library.html
+++ b/workout-library.html
@@ -65,6 +65,7 @@
 	display: none !important;
 }
 </style>
+<link rel="manifest" href="manifest.json" />
 </head>
 <body>
   <div class="global-app-css w-embed">
@@ -479,121 +480,7 @@ overflow-x: hidden;
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
-  <script>
-//document.body.setAttribute("oncontextmenu", "return false")
-if(document.body.contains(document.querySelector('.top-level')))
-{
-	let backBtn = document.querySelectorAll('.top-level')
-  backBtn.forEach((btn, index) => { 
-      btn.addEventListener("click", () => {
-      history.back();
-      });
-  });
-}
-</script>
-  <script>
-    setTimeout(removeBadge, 400);
-    function removeBadge ()
-    {
-    	let findLink = document.querySelectorAll('a');
-      for (let i = 0; i < findLink.length; i++)
-      { 
-      	if (findLink[i].href === "https://wized.com/?utm_campaign=badge")
-      		{
-            findLink[i].remove();
-          }
-      }
-    }
-    setTimeout(addBadge, 2000);
-    function addBadge ()
-    {
-    	let badge = document.createElement("div");
-      badge.innerHTML = `<div class="the-legends-dev-banner"><img src="https://assets.website-files.com/6474932b31758d71131214b7/6474932b31758d71131214a3_the_legends-logo-green.svg" loading="lazy" alt="" class="img_full"></div>`
-    	document.body.append(badge)
-    }
-</script>
-  <script src="https://cdn.jsdelivr.net/gh/native-jeremy/the-legends-config/js/member/userAuth.js" type="text/javascript"></script>
-  <script>
-// Intialisation Of Static Elements
-let check = document.querySelectorAll('[type="checkbox"]');
-let checkCustom = document.querySelectorAll(".w-checkbox-input");
-const form = document.querySelector(".filter-form");
-const resetBtn = document.getElementById("reset");
-const headingBlock = document.querySelectorAll(".capsule-header-text");
-const backBtn = document.getElementById("back");
-let filterValues = [];
-// Filters Active From Form Values
-form.addEventListener("submit", function (event) {
-  // Intialisation Of Rendered Elements
-  let capsule = document.querySelectorAll(".capsule-filter");
-  let capsuleValue = capsule;
-  // Prevent Default - Which Refreshes The Page
-  event.preventDefault();
-  for (let i = 0; i < check.length; i++) {
-    const filterBtn = check[i];
-    if (filterBtn.checked == true) {
-      let updateName = filterBtn.name.replace("-", " ");
-      filterValues.push(updateName);
-    }
-  }
-  // Forloop Through All Recipes
-  for (let i = 0; i < capsule.length; i++) {
-    const filterCap = capsule[i];
-    const filterCapValue = capsuleValue[i];
-    //console.log("Filter Capsule Title", filterCapValue.textContent.toLowerCase());
-    //console.log("Filter Button Checked", updateName.toLowerCase());
-    for (let i = 0; i < filterValues.length; i++) {
-      const filterResults = filterValues[i];
-      if (filterCapValue.textContent.includes(filterResults)) {
-        filterCap.classList.remove("hide");
-      } else {
-        filterCap.classList.add("hide");
-      }
-    }
-  }
-  backBtn.click();
-  console.log("Filter Button Checked", filterValues);
-  console.log("Form Submitted");
-});
-// Filters Reset From Reset Button
-resetBtn.addEventListener("click", () => {
-  // Intialisation Of Rendered Elements
-  let capsule = document.querySelectorAll(".capsule-filter");
-  form.reset();
-  filterValues = [];
-  // Forloop Through All Checkboxes
-  for (let i = 0; i < check.length; i++) {
-    const filterBtn = checkCustom[i];
-    filterBtn.classList.remove("w--redirected-checked");
-  }
-  for (let i = 0; i < capsule.length; i++) {
-    const filterCap = capsule[i];
-    if (filterCap.classList.contains("hide")) {
-      filterCap.classList.remove("hide");
-    }
-  }
-  console.log("Form Values Reset");
-});
-searchBar.addEventListener("keyup", function () {
-  filterList();
-});
-function filterList() {
-  let capsule = document.querySelectorAll(".capsule-filter");
-  let capsuleTitle = document.querySelectorAll(".capsule-title");
-  let capsuleTime = document.querySelectorAll(".capsule-time");
-  let value = document.getElementById("searchBar").value;
-  for (let i = 0; i < capsule.length; i++) {
-    if (
-      capsule[i].textContent.toLowerCase().includes(value.toLowerCase())
-    ) {
-      capsule[i].classList.remove("hide");
-      //capsule[i].setAttribute("style", "display: flex !important;");
-    } else {
-      capsule[i].classList.add("hide");
-      //capsule[i].setAttribute("style", "display: none !important;");
-    }
-  }
-}
-</script>
+  <script src="js/other/misc.js" type="text/javascript"></script>
+  <script src="js/workouts/workout-library.js" type="text/javascript"></script>
 </body>
 </html>
