--- a/workout.html
+++ b/workout.html
@@ -106,6 +106,7 @@
       transition: all 0.25s ease-in-out;
     }
   </style>
+  <link rel="manifest" href="manifest.json" />
 </head>
 
 <body>
@@ -456,11 +457,11 @@ overflow-x: hidden;
     </div>
     <div class="audio">
       <div id="voiceAudio" class="voice-audio w-embed">
-        <audio id="voiceSrc" {{c.voicemute}}>
+        <audio id="voiceSrc" preload="auto" src="">
         </audio>
       </div>
       <div id="sirenAudio" class="siren-audio w-embed">
-        <audio id="sirenSrc" {{c.sirenmute}}>
+        <audio id="sirenSrc">
           <source src="{{r.26.d[0].Audio[0].url}}" type="{{r.26.d[0].Audio[0].type}}">
         </audio>
       </div>
@@ -482,7 +483,6 @@ overflow-x: hidden;
         class="button-style-1 margin-top-xsmall w-button">start recovery</a>
       <a data-w-id="e66ae1d3-a128-2dbd-ab7a-600206216659" href="program-hub.html"
         class="button-style-1 margin-top-xsmall w-button">go to program hub</a>
-      <link rel="prerender" href="/program-hub" />
     </div>
   </div>
   <div id="return" data-w-id="80985ed4-635f-e834-38d5-ca513f69ee79" class="modal-trigger"></div>
@@ -491,36 +491,7 @@ overflow-x: hidden;
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
-  <script>
-    //document.body.setAttribute("oncontextmenu", "return false")
-    if (document.body.contains(document.querySelector(".top-level"))) {
-      let backBtn = document.querySelectorAll(".top-level");
-      backBtn.forEach((btn, index) => {
-        btn.addEventListener("click", () => {
-          history.back();
-        });
-      });
-    }
-  </script>
-  <script>
-    setTimeout(removeBadge, 400);
-    function removeBadge() {
-      let findLink = document.querySelectorAll("a");
-      for (let i = 0; i < findLink.length; i++) {
-        if (findLink[i].href === "https://wized.com/?utm_campaign=badge") {
-          findLink[i].remove();
-        }
-      }
-    }
-    setTimeout(addBadge, 2000);
-    function addBadge() {
-      let badge = document.createElement("div");
-      badge.innerHTML = `<div class="the-legends-dev-banner"><img src="https://assets.website-files.com/6474932b31758d71131214b7/6474932b31758d71131214a3_the_legends-logo-green.svg" loading="lazy" alt="" class="img_full"></div>`;
-      document.body.append(badge);
-    }
-  </script>
-  <!--  Workout Config Code VERY IMPORTANT DO NOT REMOVE  -->
-  <script src="js/workout.js"
-    type="text/javascript"></script>
+  <script src="js/other/misc.js" type="text/javascript"></script>
+  <script src="js/workouts/workout.js" type="text/javascript"></script>
 </body>
 </html>
