--- a/workout.html
+++ b/workout.html
@@ -248,7 +248,7 @@
               <div id="exerciseTitle" style="display: none; opacity: 0" class="title-text" v-if="!popup">
                 <div class="exercises-headings single_heading_block">
                   <div class="main-heading-style-6 center-align single-title" ref="title">
-                    Single Title
+                    {{exerciseTitle}}
                   </div>
                 </div>
                 <!--div class="exercises-headings amrap_heading_block"></div>-->
