--- a/workout.html
+++ b/workout.html
@@ -142,7 +142,7 @@
   <div id="app" w-el="load_app" class="app">
     <div w-el="exercise_page" class="app-main app-base">
       <div class="app-head current-workout">
-        <div class="app-block viewer" style="overflow-x: hidden;">
+        <div class="app-block viewer" style="overflow-x: hidden; background-color: #397235; background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .28));">
           <div class="banner top-bar"></div>
           <div class="banner bottom-bar"></div>
             <video ref="video" loop preload="auto" src="" muted webkit-playsinline playsinline class="app-fullscreen-video"
