--- a/workout.html
+++ b/workout.html
@@ -160,7 +160,7 @@
               </a>
             </div>
           </div>
-          <article id="loader" class="loading-workout video-loader" style="background-color: #397234;" v-if="StatusCode200 !== true">
+          <article id="loader" class="loading-workout video-loader" style="background-color: #397234; display: flex !important;" v-if="StatusCode200 !== true">
             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="200" height="200px" viewBox="0 0 256 256">
               <defs>
               </defs>
