--- a/programs.html
+++ b/programs.html
@@ -94,7 +94,7 @@
       <div class="header_main_menu">
         <header class="header_main">
           <div class="header_main_nav_button opened">
-            <a href="login.html" class="header_main_secondary_button opened"></a>
+            <a href="login.html" class="header_main_secondary_button opened" id="mainBtn"></a>
             <div data-w-id="e830f2b1-8e19-209f-65a1-fdc2214c379c" class="header_main_nav_icon">
               <div class="nav_icon_line opened"></div>
               <div class="nav_icon_line opened"></div>
