--- a/workout-backup.html
+++ b/workout-backup.html
@@ -107,7 +107,7 @@
   </style>
   <link rel="manifest" href="manifest.json" />
 </head>
-
+:style="{'overflow: hidden; background-color: #397235; background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .28));' : isAmrap !== 'true'}"
 <body>
   <div id="app" w-el="load_app" wized-cloak-custom="Load Round Info, Load Users, Load Exercise Diff" class="app">
     <div w-el="exercise_page" class="app-main app-base">
