--- a/index.html
+++ b/index.html
@@ -735,6 +735,6 @@
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
   <script src="js/other/userid.js"></script>
-  <script src="js/other/home.js" type="text/javascript"></script>
+  <script defer src="js/other/home.js" type="text/javascript"></script>
 </body>
 </html>
