--- a/program-hub-welcome.html
+++ b/program-hub-welcome.html
@@ -137,7 +137,7 @@ overflow-x: hidden;
 }*/
 </style> -->
   </div>
-  <div wized-cloak-custom="Load Users" w-el="load_app" class="app">
+  <div w-el="load_app" class="app">
     <div class="app-main app-base">
       <div class="app-head welcome">
         <div class="app-head-content welcome">
